# AIM

./: LICENCE.txt  NOTICE.txt  README.md
ActionClustering/: NOTICE.txt  README.md  requirements.txt  setup.cfg
ActionClustering/ActionClustering/: __init__.py  clustering.py
ActionClustering/ActionClustering/Classes/: Main.py  __init__.py  actionClustering_Dbscan.py  actionClustering_Hdbscan.py  actionClustering_Kmeans.py  paretoHdbscan.py  pareto_DBSCAN_actionSet.py  pareto_Kmeans_actionSet.py
AimDatabase/: README.md  requirements.txt  setup.cfg
AimDatabase/Data/Jenkins/Duplicate/Bag_DBSCAN/: inputset_classes.csv
AimDatabase/Data/Jenkins/Duplicate/Lev_DBSCAN/: inputset_classes.csv
AimDatabase/Data/Jenkins/Duplicate/Lev_HDBSCAN/: inputset_classes.csv
AimDatabase/Data/Joomla/: costs.csv
AimDatabase/Data/Joomla/Duplicate/: outputs_preprocessed.csv
AimDatabase/Data/Joomla/Duplicate/Bag_DBSCAN/: inputset_classes.csv
AimDatabase/Data/Joomla/Duplicate/Bag_HDBSCAN/: inputset_classes.csv
AimDatabase/Data/Joomla/Duplicate/Bag_Kmeans/: inputset_classes.csv
AimDatabase/Data/Joomla/Duplicate/Lev_DBSCAN/: inputset_classes.csv
AimDatabase/Data/Joomla/Duplicate/Lev_HDBSCAN/: inputset_classes.csv
AimDatabase/Data/Joomla/Duplicate/Lev_Kmeans/: inputset_classes.csv
AimDatabase/Evaluation/: NOTICE.txt  compare_algos.py  csv_to_json.py  eval_aim.py  gather_baselines.py  gather_results.py  gen_duel_tables.py  gen_vuln_table.py
AimDatabase/Evaluation/Auxiliary/: analysis.py  csv.py  json.py  metrics.py  os.py  tables.py  txt.py
AimDatabase/Evaluation/Tests/: testMannwhitneyu.py  testWilcoxon.py
AimDatabase/Example/: costs.csv
AimDatabase/Example/DataCollection/costs/: cost_OTG_BUSLOGIC_005.txt  cost_cwe_138.txt  cost_cwe_258.txt  cost_cwe_262.txt  cost_cwe_266.txt  cost_cwe_276.txt  cost_cwe_288.txt  cost_cwe_298.txt  cost_cwe_302.txt  cost_cwe_306.txt  cost_cwe_488.txt  cost_cwe_703.txt  cost_cwe_703b.txt  cost_cwe_841.txt  cost_cwe_88a.txt  cost_cwe_88b.txt  cost_cwe_89a.txt  cost_cwe_93b.txt  cost_cwe_94_95.txt
AimDatabase/Example/Duplicate/: outputs_preprocessed.csv
AimDatabase/Example/Duplicate/Bag_DBSCAN/DBSCAN/: inputset_action_subclasses.csv  inputset_components.csv
AimDatabase/Example/Duplicate/Bag_DBSCAN/HDBSCAN/: inputset_action_subclasses.csv  inputset_necessary.csv
AimDatabase/Example/Duplicate/Bag_DBSCAN/Kmeans/: inputset_components_minimized.csv  inputset_minimized.json  inputset_necessary.csv
AimDatabase/Example/Duplicate/Bag_HDBSCAN/: inputset_classes.csv
AimDatabase/Example/Duplicate/Bag_Kmeans/: inputset_classes.csv
AimDatabase/Example/Duplicate/Bag_Kmeans/DBSCAN/: inputset_necessary.csv
AimDatabase/Example/Duplicate/Bag_Kmeans/HDBSCAN/: inputset_components.csv
AimDatabase/Example/Duplicate/Bag_Kmeans/Kmeans/: inputset_action_subclasses.csv  inputset_components.csv  inputset_minimized.json
AimDatabase/Example/Duplicate/Lev_DBSCAN/DBSCAN/: inputset_necessary.csv
AimDatabase/Example/Duplicate/Lev_DBSCAN/HDBSCAN/: inputset_components.csv  inputset_minimized.json  inputset_necessary.csv
AimDatabase/Example/Duplicate/Lev_DBSCAN/Kmeans/: inputset_components.csv  inputset_components_minimized.csv  inputset_minimized.json
AimDatabase/Example/Duplicate/Lev_HDBSCAN/DBSCAN/: inputset_action_subclasses.csv
AimDatabase/Example/Duplicate/Lev_Kmeans/: inputset_classes.csv
AimDatabase/Results/Both/: colors.json  vulnerability_coverage.tex
AimDatabase/Results/Jenkins/: aim_execution_time.csv  aim_execution_time.json  costs.json  jenkins_algos.json  jenkins_analysis.json  jenkins_baseline_art.json  jenkins_baselines.json  jenkins_duels.json  jenkins_results.json  vulnerabilities.json
AimDatabase/Results/Jenkins/Tables/: jenkins_duels_costs.tex  jenkins_duels_genetic_600.tex  jenkins_duels_sizes.tex  jenkins_duels_times.tex
AimDatabase/Results/Joomla/: aim_execution_time.csv  aim_execution_time.json  costs.json  joomla_algos.json  joomla_analysis.json  joomla_baseline_art.json  joomla_baselines.json  joomla_duels.json  joomla_results.json  vulnerabilities.json
AimDatabase/Results/Joomla/Tables/: joomla_duels_costs.tex  joomla_duels_genetic_400.tex  joomla_duels_genetic_600.tex  joomla_duels_sizes.tex  joomla_duels_times.tex
AimDatabase/Results/Logs/: logs_jenkins.txt  logs_joomla.txt
AimOrchestration/: NOTICE.txt  README.md  requirements.txt  setup.cfg
AimOrchestration/InputMinimizer/: Inputset_for_MOCCO.py  MergeImproInputs.py  adaptiveRandomTest.py  genetic_inputs.py  minimize_components.py  minimize_inputs.py  reduce_inputs.py
IMPRO/: NOTICE.txt  README.md  setup.cfg
IMPRO/IMPRO/: __init__.py  reduce_problem.py
IMPRO/IMPRO/Classes/: __init__.py  class_input.py  class_inputset.py
IMPRO/IMPRO/Tests/: __init__.py  run_tests.py  test0.py  test1.py  test2.py  test3.py
MOCCO/: NOTICE.txt  README.md  setup.cfg
MOCCO/MOCCO/: __init__.py  search_solution.py
MOCCO/MOCCO/Classes/: __init__.py  class_individual.py  class_input.py  class_miser.py  class_misers.py  class_population.py  class_roofers.py
MOCCO/MOCCO/Functions/: __init__.py  normalization.py  selection.py
MOCCO/MOCCO/Tests/: __init__.py  test_example1.py  test_example2.py  test_fitness.py  test_reduce.py  tests.py
ManyObjectiveBaselines/: Greedy.py  NOTICE.txt  (+2 more)
OutputClustering/: NOTICE.txt  README.md  requirements.txt  setup.cfg
OutputClustering/OutputClustering/: __init__.py  outputClustering.py
OutputClustering/OutputClustering/Classes/: Main.py  __init__.py  outputClustering_Dbscan.py  outputClustering_Hdbscan.py  outputClustering_Kmeans.py  pareto_DBSCAN_outputClasses.py  pareto_Hdbscan_outputClasses.py  pareto_Kmeans_outputClasses.py
PostProcessing/: NOTICE.txt  README.md  setup.cfg
PostProcessing/PostProcessor/: __init__.py  cmd_processor.py  processor.py
PreProcessing/: LICENSE.txt  NOTICE.txt  README.md  requirements.txt  setup.cfg
PreProcessing/RefineInputs/: __init__.py  preProcess.py
PreProcessing/RefineInputs/Classes/: PreProcesseing_step1.py  PreProcessing_step2.py  PreProcessing_step3.py  Preprocessing_Joomla.py  __init__.py
(+172 files in other folders)
