[metadata]
name = ActionClustering
version = 0.0.1
author = Nazanin Bayati Chaleshtari
author_email = n.bayati@uottawa.ca
description = This package process clustering algorithms on the action sets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MetamorphicSecurityTesting/ActionSubclassesBuilder
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
include_package_data=True
[options]
packages = ActionClustering,ActionClustering.Classes
install_requires = file:requirements.txt

[options.entry_points]
console_scripts =
    cluster-inputs = ActionClustering.clustering:main
    cluster-actions = ActionClustering.clustering:main