[metadata]
name = AimDatabase
version = 1.0.0
author = Yoann Marquer
author_email = yoann.marquer@uni.lu
description = This repository contains data and scripts to evaluate AIM (Automatic Inputset Minimizer).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MetamorphicSecurityTesting/AimExamples
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = Evaluation, Evaluation.Auxiliary
install_requires = file:requirements.txt
python_requires = >=3.8

[options.entry_points]
console_scripts =
    csvToJson = Evaluation.csv_to_json:main
    gatherResults = Evaluation.gather_results:main
    gatherBaselines = Evaluation.gather_baselines:main
    evalAim = Evaluation.eval_aim:main
    genDuelTables = Evaluation.gen_duel_tables:main
    genVulnTable = Evaluation.gen_vuln_table:main
    compareAlgos = Evaluation.compare_algos:main
