[metadata]
name = InputMinimizer
version = 0.0.1
author = Nazanin Bayati Chaleshtari
author_email = n.bayati@uottawa.ca
description = This package minimizes inputs to be executed by metamorphic relations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MetamorphicSecurityTesting/InputMinimizer
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = InputMinimizer
install_requires = file:requirements.txt
python_requires = >=3.7

[options.entry_points]
console_scripts =
    art = InputMinimizer.adaptiveRandomTest:adaptiveRandomeTest
    search_solution = InputMinimizer.minimize_inputs:search_inputs
    minimize-inputs = InputMinimizer.minimize_inputs:search_inputs
    prepare-data = InputMinimizer.genetic_inputs:clean_inputs
    reduce-problem = InputMinimizer.reduce_inputs:call_minimizer
    minimize-components = InputMinimizer.minimize_components:search_components
    inputset-components = InputMinimizer.Inputset_for_MOCCO:main
    merge-impro-inputs = InputMinimizer.MergeImproInputs:main
