[metadata]
name = IMPRO
version = 0.0.1
author = Nazanin Bayati Chaleshtari and Yoann Marquer
author_email = n.bayati@uottawa.ca, yoann.marquer@uni.lu
description = This package reduces input minimization problems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MetamorphicSecurityTesting/IMPRO
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = IMPRO, IMPRO.Classes, IMPRO.Tests
install_requires = file:requirements.txt
python_requires = >=3.7

[options.entry_points]
console_scripts =
    impro = IMPRO.reduce_problem:main
