[metadata]
name = MOCCO
version = 0.0.1
author = Yoann Marquer
author_email = yoann.marquer@uni.lu
description = Genetic search for input set minimization.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MetamorphicSecurityTesting/MOCCO
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = MOCCO, MOCCO.Classes, MOCCO.Functions, MOCCO.Tests
install_requires = file:requirements.txt
python_requires = >=3.7

[options.entry_points]
console_scripts =
    mocco = MOCCO.search_solution:main
