[metadata]
name = outputClustering
version = 0.0.1
author = Nazanin Bayati Chaleshtari
author_email = n.bayati@uottawa.ca
description = This package process the refined input set and cluster the outputs of the actions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MetamorphicSecurityTesting/OutputClassesBuilder
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
include_package_data=True
[options]
packages = OutputClustering,OutputClustering.Classes
install_requires = file:requirements.txt

[options.entry_points]
console_scripts =
    cluster-outputs = OutputClustering.outputClustering:main