[metadata]
name = PostProcessor
version = 0.0.1
author = Nazanin Bayati Chaleshtari
author_email = n.bayati@uottawa.ca
description = This package return the json file of the minimized inputs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MetamorphicSecurityTesting/PostProcessor
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = PostProcessor
install_requires = file:requirements.txt
python_requires = >=3.7


[options.entry_points]
console_scripts =
    postprocess-data = PostProcessor.cmd_processor:cmd_postProc