[metadata]
name = Preprocessing
version = 0.0.1
author = Nazanin Bayati Chaleshtari
author_email = n.bayati@uottawa.ca
description = This package process the web content to produce the Refined Input Set.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MetamorphicSecurityTesting/PreProcessing
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
include_package_data=True
[options]
packages = RefineInputs,RefineInputs.Classes
install_requires = file:requirements.txt

[options.entry_points]
console_scripts =
    refine = RefineInputs.preProcess:main
    preprocess-data = RefineInputs.preProcess:main
